# usr-local-pull

./: .gitignore  MANIFEST.in  README.md  TODO.md  pyproject.toml
notes/: .gitignore  ghapis.http
src/usr_local_pull/: __init__.py  app.py  cli.py  gh_client.py
src/usr_local_pull/supported_apps/: __init__.py  ast_grep.py  bat.py  dasel.py  eza.py  fd_find.py  fnm.py  fzf.py  gitleaks.py  gojq.py  jid.py  jq.py  jqp.py  lazygit.py  mdbook.py  neovide.py  restish.py  ripgrep.py  rust_analyzer.py  starship.py  stylua.py  uv.py  xq.py  yq.py
src/usr_local_utils/: app.py  archive_extractor.py  cli.py  gh_client.py
src/usr_local_utils/supported_apps/: __init__.py  bat.py  dasel.py  eza.py  fd_find.py  yq.py
